--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "firebase": "^5.0.2",
+    "lodash": "^4.17.10",
+    "sweetalert": "^2.1.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
